--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,30 @@
-# Compiled Lua sources
-luac.out
+# Ansible
+*.retry
 
-# luarocks build files
-*.src.rock
-*.zip
-*.tar.gz
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# Object files
-*.o
-*.os
-*.ko
-*.obj
-*.elf
+.idea/
+*.iml
+*.ipr
 
-# Precompiled Headers
-*.gch
-*.pch
+# CMake
+cmake-build-*/
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-*.def
-*.exp
+# File-based project format
+*.iws
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+# IntelliJ
+out/
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
